# wezterm

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  README-DISTRO-MAINTAINER.md  analyze.py
Alatty.app/Contents/: Info.plist
assets/: wezterm.appdata.xml
assets/flatpak/: org.wezfurlong.wezterm.appdata.template.xml
assets/shell-completion/: bash  fish  zsh
ci/: build-docs.sh  deploy.sh  generate-docs.py  update-derived-files.sh
codec/: Cargo.toml
codec/src/: lib.rs
config/: Cargo.toml
config/src/: background.rs  color.rs  config.rs  keyassignment.rs  lib.rs  lua.rs  scheme_data.rs  ssh.rs
env-bootstrap/: Cargo.toml
env-bootstrap/src/: lib.rs
lua-api-crates/color-funcs/: Cargo.toml
mux/: Cargo.toml
mux/src/: domain.rs  lib.rs  localpane.rs  pane.rs  ssh.rs
term/: Cargo.toml  README.md
termwiz/: CHANGELOG.md  Cargo.toml
termwiz/src/: cell.rs  error.rs  hyperlink.rs  image.rs  lib.rs
test-data/: extract-x11-icon.sh
vtparse/src/: lib.rs
wezterm/: Cargo.toml
wezterm-client/: Cargo.toml
wezterm-client/src/: client.rs  domain.rs
wezterm-font/: Cargo.toml
wezterm-font/src/: lib.rs  parser.rs
wezterm-gui/: Cargo.toml
wezterm-gui-subcommands/src/: lib.rs
wezterm-gui/src/: colorease.rs  commands.rs  frontend.rs  glyphcache.rs  inputmap.rs  main.rs  renderstate.rs  scrollbar.rs  shapecache.rs  tabbar.rs  update.rs  utilsprites.rs
wezterm-toast-notification/: Cargo.toml
wezterm-toast-notification/src/: macos.rs  windows.rs
wezterm/src/: asciicast.rs  main.rs
window/: Cargo.toml
window/src/: connection.rs
(+47 files in other folders)
