[package]
name = "env-bootstrap"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3"
chrono = {version="0.4", default-features=false, features=["unstable-locales"]}
config = { path = "../config" }
dirs-next = "2.0"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
env_logger = "0.10" # Note: we rely on filter::Builder which is gone in 0.11
termwiz = { path = "../termwiz" }
wezterm-version = { path = "../wezterm-version" }

[target."cfg(windows)".dependencies]
winapi = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.20"
objc = "0.2"

